plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven { url = uri("https://jitpack.io") }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Pyke Lib
	implementation("com.github.Pyke-Lee:PykeLib:${project.pyke_lib_version}")

	// io.socket
	implementation "io.socket:socket.io-client:${project.io_socket_version}"
	include "io.socket:socket.io-client:${project.io_socket_version}"
	include "io.socket:engine.io-client:${project.io_socket_version}"

	// http
	implementation "com.squareup.okhttp3:okhttp:3.14.9"
	include "com.squareup.okhttp3:okhttp:3.14.9"

	implementation "com.squareup.okio:okio:1.17.2"
	include "com.squareup.okio:okio:1.17.2"

	// json
	implementation "org.json:json:20231013"
	include "org.json:json:20231013"

	// gson
	implementation "com.google.code.gson:gson:${project.gson_version}"
	include "com.google.code.gson:gson:${project.gson_version}"

	// java-websocket
	implementation 'org.java-websocket:Java-WebSocket:1.5.3'
	include 'org.java-websocket:Java-WebSocket:1.5.3'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories { }
}